# iDAW

./: .cursorrules  .gitignore  700088  CLAUDE.md  COMPREHENSIVE_TODO.md  CROSS_REPOSITORY_NAVIGATION.md  CURSOR_QUICK_START.md  CURSOR_WORKFLOW_GUIDE.md  CURSOR_WORKFLOW_IMPLEMENTATION_SUMMARY.md  DAWTrainingEditor.cpp.rtf  DAWTrainingPlugin.cpp.rtf  DAWTrainingPlugin.h.rtf  EXAMPLE_SESSION_WALKTHROUGH.md  IMPLEMENTATION_ROADMAP_6_MONTHS.md  INTEGRATION_STATUS.md  PERFORMANCE_IMPROVEMENTS.md  PROJECT_NAVIGATION.md  PR_MANAGER_IMPLEMENTATION.md  PR_MANAGER_QUICKSTART.md  PR_MANAGER_README.md  README.md  REPOSITORY_COMPILATION.md  ROADMAP_18_MONTHS.md  SESSION_TEMPLATE.md  STUCK_LOG.md  Sprint_4_Audio_and_MIDI_Enhancements.md  Sprint_5_Platform_and_Environment_Support.md  WORKFLOW_QUICK_REFERENCE.txt  daiw_menubar.py  finalize:execdwai.rtf  generate_scales_db.py  harmony_tools.py  install_windows.ps1  pr_manager.py  progress.md  pyproject.toml  sprint_4.md  template_storage.py  test_performance.py  test_pr_manager.py
.github/agents/: my-agenic.agent.md  my-agent.agent.md
.github/workflows/: auto-merge-prs.yml  platform_support.yml  sprint_suite.yml
DAiW-Music-Brain/music_brain/: __init__.py  cli.py
DAiW-Music-Brain/music_brain/arrangement/: __init__.py  bass_generator.py  energy_arc.py  generator.py  templates.py
DAiW-Music-Brain/music_brain/daw_server/: __init__.py  protocol.py  server.py
DAiW-Music-Brain/music_brain/desktop/: __init__.py  app.py  midi_export.py  project.py  timeline.py
iDAW_Core/: CMakeLists.txt
iDAW_Core/application/: MainApplication.cpp  MainApplication.h  MainWindow.cpp  MainWindow.h  PreferencesManager.cpp  PreferencesManager.h
iDAW_Core/arrangement/: ArrangementView.cpp  ArrangementView.h
iDAW_Core/intent/: IntentPanel.cpp  IntentPanel.h
iDAW_Core/mixer/: MixerPanel.cpp  MixerPanel.h
iDAW_Core/session/: Project.cpp  Project.h
iDAW_Core/tracks/: Clip.cpp  Clip.h  PluginSlot.cpp  PluginSlot.h  Track.cpp  Track.h  TrackList.cpp  TrackList.h
iDAW_Core/transport/: TransportBar.cpp  TransportBar.h  TransportState.cpp  TransportState.h
iDAWi/: README.md  package.json
iDAWi/src/: App.tsx  index.css
iDAWi/src/components/SideA/: Mixer.tsx  Transport.tsx  VUMeter.tsx
iDAWi/src/components/SideB/: EmotionWheel.tsx  GhostWriter.tsx  index.tsx
iDAWi/src/hooks/: useTauriAudio.ts
iDAWi/src/store/: useStore.ts
idawi/: package.json
idawi/src/: App.tsx
idawi/src/components/SideA/: Knob.tsx  Mixer.tsx
idawi/src/components/SideB/: EmotionWheel.tsx  GhostWriter.tsx  Interrogator.tsx
idawi/src/hooks/: useMusicBrain.ts
idawi/src/store/: useStore.ts
include/daiw/midi/: MidiIO.h
mcp_todo/: roadmap_todos.json
mobile/: ios_audio_unit.py
music_brain/: __init__.py  api.py
music_brain/arrangement/: generator.py
music_brain/audio/: __init__.py  analyzer.py  chord_detection.py
music_brain/daw/: __init__.py
music_brain/groove/: templates.py
music_brain/structure/: comprehensive_engine.py
music_brain/voice/: __init__.py  modulator.py
plugins/: CMakeLists.txt
python/: pyproject.toml
python/penta_core/collaboration/: __init__.py
python/penta_core/groove/: performance.py  polyrhythm.py
python/penta_core/harmony/: jazz_voicings.py
src/audio/: AudioFile.cpp
src_penta-core/groove/: GrooveEngine.cpp  OnsetDetector.cpp  RhythmQuantizer.cpp  TempoEstimator.cpp
src_penta-core/harmony/: HarmonyEngine.cpp
src_penta-core/ml/: MLInterface.cpp
src_penta-core/osc/: OSCClient.cpp  OSCServer.cpp
tests_music-brain/: conftest.py  test_api.py  test_penta_core_server.py  test_python_cpp_bridge.py
tests_penta-core/: CMakeLists.txt  plugin_test_harness.cpp
